# xdp-sentinel

./: .gitignore  Cargo.toml  LICENSE  Makefile  build.rs
configuration/: config.toml
src/: application.rs  configuration.rs  error.rs  lib.rs  main.rs
src/bpf/: mod.rs  xdp_blocker.bpf.c  xdp_blocker.skel.rs  xdp_blocker_defs.h
