[package]
name = "xdp-sentinel"
version = "0.1.0"
edition = "2021"

[build-dependencies]
libbpf-cargo = { version = "0.24.8" }

[dependencies]
libbpf-cargo = "0.24.8"
libbpf-rs = "0.24.8"
thiserror = "2.0.9"
nix = { version = "0.28", default-features = false, features = ["net", "user"] }
libc = "0.2.169"
ctrlc = "3.4.5"
plain = "0.2.3"
